--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,11 @@
   "name": "Demo-Name",
   "short_name": "Demo-ShortName",
   "icons": [{
-    "src": "img/icon-192.png",
+    "src": "icon-192.png",
     "sizes": "192x192",
     "type": "image/png"
   }, {
-    "src": "img/icon-512.png",
+    "src": "icon-512.png",
     "sizes": "512x512",
     "type": "image/png"
   }],
